# plex2letterboxd

./: .gitignore  Dockerfile  LICENSE  README.md  config.ini.example  pyproject.toml  setup.py
plex2letterboxd/: __main__.py  plex2letterboxd.py
plex_to_letterboxd/: __main__.py
